Button and Alignment Fix
Learn more button was styled and aligned, the alignment for the contact
icons were adjusted.

--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,31 @@ dt, dd {
   border-radius: 10px;
 }
 
+.btn-facts {
+  text-decoration: none;
+  background-color: #141446;
+  color: #e6dfda;
+  padding: .25rem;
+  margin-bottom: 1rem;
+}
+
+.btn-facts:hover {
+  background-color: #393963;
+  border: 3px solid #393963;
+}
+
+.facts-list {
+  padding: 1rem;
+}
+
+.facts-list li {
+  padding: .25rem 0;
+}
+
+.facts {
+  text-align: center;
+}
+
 strong {
   padding: .25rem;
   margin-bottom: .3rem;
@@ -208,8 +233,13 @@ footer p {
   padding: .5rem;
 }
 
+.icons {
+  text-align: center;
+}
+
 .icons li {
   display: inline-block;
+  padding: 0 1rem;
 }
 
 span {
